Constant attempts at fixing layout issues

--- a/style.css
+++ b/style.css
@@ -77,12 +77,33 @@ body
     justify-content: flex-start;
     flex-direction: row;
     height: 100%;
+    width: 100%;
+}
+
+.left-container
+{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 18%;
+    height: 100%;
+    background-color: rgba(20,25,34,255);
+}
+
+.right-container
+{
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    width: calc(100% - 18%);
+    height: 100%;
+    margin-left: 0px;
 }
 
 /* ASIDE */
 aside 
 {
-    width: 15.80%;
+    width: 100%;
     height: 100vh;
     background-color: rgba(0,0,0,255);
     display: flex;
@@ -253,7 +274,7 @@ main
 {
     background-color: rgba(20,25,34,255);
     padding-top: 88px;
-    width: calc(100% - 15.80%);
+    width: 100%;
     height: 100vh;
     overflow-y: scroll;
 }
@@ -312,7 +333,7 @@ header
     position: fixed;
     top: 0;
     right: 0;
-    width: calc(100% - 303px);
+    width: calc(100% - 18%);
     z-index: 1;
     display: flex;
     justify-content: end;
